<?xml version="1.0"?>
<package format="2">
  <name>igvc_rviz_plugins</name>
  <version>0.0.0</version>
  <description>Rviz plugins for IGVC</description>

  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>
  <maintainer email="chaussee.al@gmail.com">Al Chaussee</maintainer>

  <license>MIT</license>

  <url type="website">http://www.robojackets.org</url>
  <url type="website">http://www.github.com/robojackets/igvc-software</url>
  <url type="website">http://robojackets.github.io/igvc-software</url>
  <url type="website">http://www.noruts.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>igvc_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
