<?xml version="1.0"?>
<package>
  <name>igvc_bag_utils</name>
  <version>0.0.0</version>
  <description>The RoboJackets' IGVC bag file utility package</description>

  <maintainer email="jgibson37@gatech.edu">Jason Gibson</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <url type="website">http://www.robojackets.org</url>
  <url type="website">http://www.github.com/robojackets/igvc-software</url>
  <url type="website">http://robojackets.github.io/igvc-software</url>
  <url type="website">http://www.noruts.com</url>

  <author email="jmgibson274@gmail.com">Jason Gibson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>image_geometry</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>joystick_drivers</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>stereo_image_proc</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>

</package>
